UploadImage data model and firebase storage upload functionality - Created protocol stubs for FirebaseController    - Listener for onUploadChange    - Listener for addArtwork and deleteArtwork - Created a data model for UploadImage - FirebaseController now has references to Firestore database and storage    - Work required for uploading image to Firestore collection    - Upload -> Save button now uploads the appropriate file to Firebase storage

--- a/OpenCurate/Application/Info.plist
+++ b/OpenCurate/Application/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow permission to display art galleries near your location.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to upload photos</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
